Hide overflow to avoid scrollbars appearing

--- a/style.css
+++ b/style.css
@@ -1,6 +1,9 @@
 body {
     background: #fff;
     color: #fff;
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
 }
 a {
     position: absolute;
